Remove deprecated constructor